RESOLVED FIXED39596
[EFL] Reorder class initializers to remove compiler warnings
https://bugs.webkit.org/show_bug.cgi?id=39596
Summary [EFL] Reorder class initializers to remove compiler warnings
Lucas De Marchi
Reported 2010-05-24 08:17:26 PDT
The following patch reorder some initializers in order to have no complaints by gcc.
Attachments
fix compiler warnings (6.53 KB, patch)
2010-05-24 08:19 PDT, Lucas De Marchi
no flags
fix compiler warnings (6.55 KB, patch)
2010-05-24 09:09 PDT, Lucas De Marchi
no flags
Lucas De Marchi
Comment 1 2010-05-24 08:19:07 PDT
Created attachment 56889 [details] fix compiler warnings
WebKit Review Bot
Comment 2 2010-05-24 08:30:21 PDT
Attachment 56889 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Lucas De Marchi
Comment 3 2010-05-24 09:08:46 PDT
Comment on attachment 56889 [details] fix compiler warnings clearing flags.
Lucas De Marchi
Comment 4 2010-05-24 09:09:23 PDT
Created attachment 56893 [details] fix compiler warnings
WebKit Commit Bot
Comment 5 2010-05-28 07:56:25 PDT
Comment on attachment 56893 [details] fix compiler warnings Clearing flags on attachment: 56893 Committed r60358: <http://trac.webkit.org/changeset/60358>
WebKit Commit Bot
Comment 6 2010-05-28 07:56:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.