2010-05-28  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

Reviewed by Kenneth Rohde Christiansen.

        Reorder class initializers to remove compiler warnings.
        https://bugs.webkit.org/show_bug.cgi?id=39596

        * platform/efl/PlatformKeyboardEventEfl.cpp: ditto.
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent): ditto.
        * platform/efl/PlatformMouseEventEfl.cpp: ditto.
        (WebCore::PlatformMouseEvent::PlatformMouseEvent): ditto.
        * platform/efl/PlatformWheelEventEfl.cpp: ditto
        (WebCore::PlatformWheelEvent::PlatformWheelEvent): ditto.

Canonical link: https://commits.webkit.org/51401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60358 268f45cc-cd09-0410-ab3c-d52691b4dbfc