WebCore/platform/efl/PlatformMouseEventEfl.cpp
@@ -48,44 +48,44 @@ void PlatformMouseEvent::setClickCount(Evas_Button_Flags flags)
 }
 
 PlatformMouseEvent::PlatformMouseEvent(const Evas_Event_Mouse_Down* ev, IntPoint pos)
-    : m_timestamp(currentTime())
+    : m_position(IntPoint(ev->canvas.x - pos.x(), ev->canvas.y - pos.y()))
+    , m_globalPosition(IntPoint(ev->canvas.x, ev->canvas.y))
+    , m_button(MouseButton(ev->button - 1))
+    , m_eventType(MouseEventPressed)
     , m_shiftKey(evas_key_modifier_is_set(ev->modifiers, "Shift"))
     , m_ctrlKey(evas_key_modifier_is_set(ev->modifiers, "Control"))
     , m_altKey(evas_key_modifier_is_set(ev->modifiers, "Alt"))
     , m_metaKey(evas_key_modifier_is_set(ev->modifiers, "Meta"))
-    , m_globalPosition(IntPoint(ev->canvas.x, ev->canvas.y))
-    , m_position(IntPoint(ev->canvas.x - pos.x(), ev->canvas.y - pos.y()))
-    , m_button(MouseButton(ev->button - 1))
-    , m_eventType(MouseEventPressed)
+    , m_timestamp(currentTime())
 {
     setClickCount(ev->flags);
 }
 
 PlatformMouseEvent::PlatformMouseEvent(const Evas_Event_Mouse_Up* ev, IntPoint pos)
-    : m_timestamp(currentTime())
+    : m_position(IntPoint(ev->canvas.x - pos.x(), ev->canvas.y - pos.y()))
+    , m_globalPosition(IntPoint(ev->canvas.x, ev->canvas.y))
+    , m_button(MouseButton(ev->button - 1))
+    , m_eventType(MouseEventReleased)
     , m_shiftKey(evas_key_modifier_is_set(ev->modifiers, "Shift"))
     , m_ctrlKey(evas_key_modifier_is_set(ev->modifiers, "Control"))
     , m_altKey(evas_key_modifier_is_set(ev->modifiers, "Alt"))
     , m_metaKey(evas_key_modifier_is_set(ev->modifiers, "Meta"))
-    , m_globalPosition(IntPoint(ev->canvas.x, ev->canvas.y))
-    , m_position(IntPoint(ev->canvas.x - pos.x(), ev->canvas.y - pos.y()))
-    , m_button(MouseButton(ev->button - 1))
-    , m_eventType(MouseEventReleased)
+    , m_timestamp(currentTime())
 {
     setClickCount(ev->flags);
 }
 
 PlatformMouseEvent::PlatformMouseEvent(const Evas_Event_Mouse_Move* ev, IntPoint pos)
-    : m_timestamp(currentTime())
+    : m_position(IntPoint(ev->cur.canvas.x - pos.x(), ev->cur.canvas.y - pos.y()))
+    , m_globalPosition(IntPoint(ev->cur.canvas.x, ev->cur.canvas.y))
+    , m_button(MouseButton(ev->buttons - 1))
+    , m_eventType(MouseEventMoved)
+    , m_clickCount(0)
     , m_shiftKey(evas_key_modifier_is_set(ev->modifiers, "Shift"))
     , m_ctrlKey(evas_key_modifier_is_set(ev->modifiers, "Control"))
     , m_altKey(evas_key_modifier_is_set(ev->modifiers, "Alt"))
     , m_metaKey(evas_key_modifier_is_set(ev->modifiers, "Meta"))
-    , m_globalPosition(IntPoint(ev->cur.canvas.x, ev->cur.canvas.y))
-    , m_position(IntPoint(ev->cur.canvas.x - pos.x(), ev->cur.canvas.y - pos.y()))
-    , m_clickCount(0)
-    , m_button(MouseButton(ev->buttons - 1))
-    , m_eventType(MouseEventMoved)
+    , m_timestamp(currentTime())
 {
 }
 
