WebCore/platform/efl/PlatformWheelEventEfl.cpp
@@ -41,14 +41,14 @@ enum {
 };
 
 PlatformWheelEvent::PlatformWheelEvent(const Evas_Event_Mouse_Wheel* ev)
-    : m_granularity(ScrollByPixelWheelEvent)
+    : m_position(IntPoint(ev->canvas.x, ev->canvas.y))
+    , m_globalPosition(IntPoint(ev->canvas.x, ev->canvas.y))
+    , m_granularity(ScrollByPixelWheelEvent)
     , m_isAccepted(false)
     , m_shiftKey(evas_key_modifier_is_set(ev->modifiers, "Shift"))
     , m_ctrlKey(evas_key_modifier_is_set(ev->modifiers, "Control"))
     , m_altKey(evas_key_modifier_is_set(ev->modifiers, "Alt"))
     , m_metaKey(evas_key_modifier_is_set(ev->modifiers, "Meta"))
-    , m_globalPosition(IntPoint(ev->canvas.x, ev->canvas.y))
-    , m_position(IntPoint(ev->canvas.x, ev->canvas.y))
 {
     // A negative z value means (in EFL) that we are scrolling down, so we need
     // to invert the value.
